# Snake

./: CMakeLists.txt  CSCSnake  Makefile  Snake  libSDL2_image-2.0.so.0  readme.md
src/: Action.h  ActionList.h  ActionStatus.h  Active.h  Entity.cpp  Entity.h  Events.h  Fruit.h  GameManager.cpp  GameManager.h  Renderer.cpp  Renderer.h  SnakeBody.h  SnakeController.cpp  SnakeController.h  SnakeHead.cpp  SnakeHead.h  SnakePart.cpp  SnakePart.h  SnakeTail.h  globals.h  main.cpp
